--- a/package.json
+++ b/package.json
@@ -27,25 +27,25 @@
   "license": "Apache Version 2.0",
   "dependencies": {
     "async": "^1.5.2",
-    "body-parser": "^1.15.0",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.15.0",
     "client-sessions": "^0.7.0",
-    "cookie-session": "^2.0.0-alpha.1",
     "cookie-parser": "~1.3.5",
+    "cookie-session": "^2.0.0-alpha.1",
     "debug": "~2.2.0",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
     "gcloud": "^0.28.0",
     "googleapis": "^2.1.7",
-    "mongodb": "^2.1.7",
-    "mongoose": "^4.4.8",
     "jade": "^1.11.0",
     "kerberos": "^0.0.18",
     "lodash": "^4.5.1",
     "mongodb": "^2.1.7",
+    "mongoose": "^4.4.8",
     "morgan": "~1.6.1",
     "multer": "^1.1.0",
     "prompt": "^1.0.0",
+    "sanitize-html": "^1.11.4",
     "stylus": "^0.54.2"
   },
   "devDependencies": {
